--- a/style.css
+++ b/style.css
@@ -92,3 +92,19 @@ section{
 .copy{
     margin-top: 150px;
 }
+.extra{
+    text-align: center;
+    margin-top: 100px;
+    font-size: 40px;
+}
+.Extra-section{
+    width: 40%;
+    margin: auto;
+    background-color: rgba(130, 136, 75, 0.829);
+}
+.list-type{
+    font-size: 20px;
+}
+ul{
+    list-style-type: circle;
+}
