--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ section{
     background-repeat: no-repeat;
     background-position: right;
 }
-.footer{
+.clint{
     text-align: center;
     background-image: url("images/footer-bg.png");
     background-repeat: no-repeat;
@@ -89,8 +89,9 @@ section{
 .first-part{
     margin-bottom: 50px;
 }
-.copy{
+.footer{
     margin-top: 150px;
+    text-align: center;
 }
 .extra{
     text-align: center;
